# langchain-rag

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  models.py
app/implementations/: langgraph_impl.py
app/rag/: indexer.py  retriever.py
app/rag/data/: javascript_errors.md  python_errors.md  sql_errors.md
app/utils/: metrics.py
tests/: test_runner.py
tests/bug_cases/: cases.json
